# lancedb-haystack

./: README.md  hatch.toml  pyproject.toml
src/lancedb_haystack/document_stores/: __init__.py  errors.py  lancedb.py
